Initial release: CC10x Development Lifecycle System
Complete lifecycle orchestrator with systematic quality gates.

🎯 What is CC10x?
Systematic 10x development with quality gates at every phase:
PLAN → BUILD → REVIEW → DEPLOY

📦 5 Production Skills:
• cc10x-orchestrator: Master coordinator with intent detection
• analyzing-implementation-risks: 8-dimension "What Could Go Wrong?"
• tdd-patterns: RED-GREEN-REFACTOR methodology
• code-review-patterns: Multi-dimensional analysis (Security, Performance, Quality, UX)
• deployment-patterns: Staged rollouts with 3-level rollback

✨ Key Features:
• Automatic workflow routing based on intent
• Parallel agent execution for speed
• Human checkpoints at phase boundaries
• Progressive disclosure for token efficiency
• Risk-first approach preventing bugs before coding

🚀 Ready for production use!

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,26 @@ coverage/
 *.swo
 *~
 
-# Private skills - not for public repo
+# Local Claude settings
+.claude/settings.local.json
+.claude/memory/
+
+# Skilz framework (this is CC10x only)
+.claude/skills/skill-builder/
+docs/
+examples/
+templates/
+tools/
+
+# Development/draft materials
+inspiration/
+templates/intelligent-orchestrator/
+
+# Private skills
 .claude/skills/climbing-training-builder/
+
+# Temporary files
+*.tmp
+*.temp
+*.draft.md
+*.wip.md
